fix layout bugs

--- a/src/css/home/_04-research.css
+++ b/src/css/home/_04-research.css
@@ -43,6 +43,8 @@
         display: block;
         max-height: 100%;
         max-width: 100%;
+        height: auto;
+        width: 100%;
       }
     }
 
